项目完成，以后就解决bug
项目基本完成，下面就解决一些运行bug

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -95,7 +95,7 @@
 						var tableHead = '<thead><tr><td>编号</td><td>学号</td><td>姓名</td><td>权限</td><td>电话</td><td>重置密码/删除</td></tr></thead>';
 						var tableBody = '<tbody>';
 						for (var i = 0; i < data.users.length; i++) {
-							tableBody += '<tr><td>'+(i+1)+'</td><td>'+data.users[i].XH_ID+'</td><td>'+data.users[i].Name+'</td><td>'+data.users[i].Authority+'</td><td>'+data.users[i].phone+'</td><td><div class="Set_dele glyphicon glyphicon-wrench" onclick="resetPass(&quot;'+data.users[i].XH_ID+'&quot;)"></div> | <div class="Set_dele glyphicon glyphicon-remove" onclick="deleteUser(&quot;'+data.users[i].XH_ID+'&quot;)"></div></td></tr>';
+							tableBody += '<tr><td>'+(i+1)+'</td><td>'+data.users[i].XH_ID+'</td><td>'+data.users[i].Name+'</td><td>'+userOrAdmin(data.users[i].status)+'</td><td>'+data.users[i].phone+'</td><td><div class="Set_dele glyphicon glyphicon-wrench" onclick="resetPass(&quot;'+data.users[i].XH_ID+'&quot;)"></div> | <div class="Set_dele glyphicon glyphicon-remove" onclick="deleteUser(&quot;'+data.users[i].XH_ID+'&quot;)"></div></td></tr>';
 						};
 						tableBody += '</tbody>';
 						document.getElementById('userMsgShow').innerHTML = tableHead+tableBody;
@@ -104,6 +104,13 @@
 						alert("系统错误" + textStatus);
 					}
 				});
+			}
+			function userOrAdmin(status) {
+				if (status == 1) {
+					return '管理员'
+				} else {
+					return '用户'
+				}
 			}
 			//隐藏状态栏
 			function hideAll() {
