--- a/views/user/ItemDetail.html
+++ b/views/user/ItemDetail.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/main/bootstrap.css">
 	<link rel="stylesheet" href="css/main/normalize.css">
 	<link rel="stylesheet" href="css/teambition.css">
-	<title>teamBition</title>
+	<title>工程大易班</title>
 	<style>html,body{height:100%;}</style>
 </head>
 <body onload="getMomentData()">
