--- a/views/user/homepage.html
+++ b/views/user/homepage.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/Main.css">
 	<link rel="stylesheet" href="css/teambition.css">
 	<link rel="stylesheet" href="css/user/userHomepage.css">
-	<title>teamBition</title>
+	<title>工程大易班</title>
 	<style>html,body{height:100%;}</style>
 </head>
 <body onload="getRawData()" style="overflow:hidden">
