--- a/web/css/teambition.css
+++ b/web/css/teambition.css
@@ -12,11 +12,9 @@ nav ,.sec_nav{
 	width: 100%;
 	height: 50px;
 	box-shadow: 0px 1px 3px #777;
-	z-index: 1000;
 }
 .sec_nav {
 	background-color: #EEE;
-	z-index: 999 !important;
 }
 
 .nav_pic {
@@ -31,6 +29,14 @@ nav ,.sec_nav{
 	background-position: 50% 50%;
 }
 
+.centerGet_btn {
+	float: left;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+}
+
 .nav_sec1 {
 	display: inline-block;
 	position: absolute;
@@ -41,6 +47,7 @@ nav ,.sec_nav{
 }
 
 .nav_btn {
+	cursor: pointer;
 	color: #222;
 	text-decoration:none;
 	margin: 15px;
@@ -235,6 +242,7 @@ nav ,.sec_nav{
 .detail_add {
 	height: 45px;
 	cursor: pointer;
+	background-color: #EEE;
 	-webkit-transition:all .2s ease-in-out;
 }
 .detail_add:hover {
@@ -257,4 +265,28 @@ nav ,.sec_nav{
 	background-color: #EEE;
 	-webkit-transition:all .7s ease-in-out;
 	-webkit-transform: translateX(-50%) translateY(-50%);
+}
+.detail_Maintext {
+	position: relative;
+	top: 30px;
+	left: 50%;
+	outline:none;
+	border: 0px;
+	width: 80%;
+	-webkit-transform: translateX(-50%);
+}
+.detailmodel_btn {
+	margin: 10px 0px;
+	border: 0px;
+	background-color: #EEE;
+	position: relative;
+	top: 60px;
+	width: 80%;
+	height: 45px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-webkit-transition:all .2s ease-in-out;
+}
+.detailmodel_btn:hover {
+	background-color: #AAA;
 }
