排班功能基本完成

--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -130,7 +130,7 @@
 			<!--用于等会ajax传输数据-->
 			<span id="articleid_2" style="display: none"></span>
 			<section class="Set_xm">
-				<select class="form-control" name="changeart" id="changeart_sel_2" onclick="clearvalue(this)">
+				<select class="form-control" name="changeart" id="changeart_sel_2" onclick="clearvalue_2(this)">
 					<option value="" selected="true" disabled="true">—选择减少数量—</option>
 					<option value="1">1</option>
 					<option value="5">5</option>
