--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -64,11 +64,14 @@
 					<table id="MomentsData" class="table table-condensed table-hover">
 					</table>
 					<div class="pageStyle" id="pagenav">
-						<button onclick="beforePage()">上一页（感觉有问题 后面弄）</button>
+						<button id="mom_prev" onclick="beforePage()">上一页（感觉有问题 后面弄）</button>
 						<span id="页码"></span>
-						<button onclick="afterPage()">下一页（感觉有问题 后面弄）</button>
+						<button id="mom_aft" onclick="afterPage()">下一页（感觉有问题 后面弄）</button>
 						<div id="thePage">
-
+						<button id="mom_search_prev" onclick="beforePage_s()" style="display: none">上一页（搜索的）</button>
+						<span id="yema_2"></span>
+						<button id="mom_search_aft" onclick="afterPage_s() "style="display: none">下一页（搜索的）</button>
+						<div id="thePage_s">
 						</div>
 					</div>
 				</div>
