--- a/views/admin/emptyclassshow.html
+++ b/views/admin/emptyclassshow.html
@@ -111,8 +111,10 @@
 					<table id="emptyclassdata" class="table table-condensed table-hover">
 						<span id="msg918"><h1>第9、18周为我校考试周。因无考试安排数据，请手动排班。</h1></span>
 					</table>
-					</div>
 				</div>
+				<button id="anpai_prev" onclick="beforePage_anpai()" style="display: none">上一页</button>
+				<button id="anpai_aft" onclick="afterPage_anpai()" style="display: none">下一页</button>
+			</div>
 			</div>
 		</div>
 		<!-- 以下安排手动添加，默认隐藏 -->
