--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -69,8 +69,9 @@
 				</span><hr>
 				<div class="Ad_Article_Main">
 					<table id="articleMsgShow" class="table table-condensed table-hover">
-
 					</table>
+					<button id="article_prev" onclick="beforePage_article()">上一页</button>
+					<button id="article_aft" onclick="afterPage_article()">下一页</button>
 				</div>
 			</div>
 		</div>
