--- a/web/css/admin/adminArticle.css
+++ b/web/css/admin/adminArticle.css
@@ -64,3 +64,14 @@
     padding: 5px;
     border-radius: 30px;
 }
+.yema_art a{
+    margin:10px;
+    padding: 5px;
+    font-size: 1.3em;
+    cursor:pointer;
+}
+
+.yema_choosed{
+    color: #99CC66;
+    border: 1px solid #99CC66;
+}
