基本完成用户、库存、动态、排班的功能及分页；接下来样式

--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -70,9 +70,11 @@
 				<div class="Ad_Article_Main">
 					<table id="articleMsgShow" class="table table-condensed table-hover">
 					</table>
-					<button id="article_prev" onclick="beforePage_article()">上一页</button>
-					<button id="article_aft" onclick="afterPage_article()">下一页</button>
 				</div>
+			</div>
+			<div>
+				<button id="article_prev" onclick="beforePage_article()">上一页</button>
+				<button id="article_aft" onclick="afterPage_article()">下一页</button>
 			</div>
 		</div>
 		<!-- 以下为库存种类添加，默认隐藏 -->
