--- a/web/css/admin/adminUser.css
+++ b/web/css/admin/adminUser.css
@@ -4,3 +4,51 @@
 	height: 80%;
 	/*background-color: #AAA;*/
 }
+
+.cover_user_2{
+	opacity: 0;
+	position: absolute;
+	left: 0%;
+	top: -999px;
+	width: 100%;
+	height: 100%;
+	background-color: #ffffff;
+	z-index: 100;
+	-webkit-transition:all .4s ease-in-out;
+}
+.showSetting_user_2{
+	overflow: hidden;
+	position: absolute;
+	z-index: 101;
+	opacity: 0;
+	width: 200px;
+	height: 300px;
+	background-color: #909090;
+	opacity: 0.4;
+	border-radius: 5%;
+	left: 50%;
+	top: -600px;
+	-webkit-transform: translateX(-50%);
+	-webkit-transition:all .4s ease-in-out;
+}
+.Set_tit_user_2{
+	position: relative;
+	color: #EEE;
+	font-size: 1.2em;
+	text-align: center;
+	text-shadow: 5px 5px 5px #000;
+	top: 13px;
+	-webkit-transform: translateY(-50%);
+}
+
+.yema_user a{
+	margin:10px;
+	padding: 5px;
+	font-size: 1.3em;
+	cursor:pointer;
+}
+
+.yema_choosed{
+	color: #99CC66;
+	border: 1px solid #99CC66;
+}
