--- a/web/css/admin/adminEmptyclass.css
+++ b/web/css/admin/adminEmptyclass.css
@@ -26,13 +26,91 @@
 	margin-top: 14px;
 	margin-bottom: -14px;
 }
-.yema_anpai a{
-	margin:10px;
-	padding: 5px;
-	font-size: 1.3em;
-	cursor:pointer;
+.spinner {
+  margin: 100px auto;
+  width: 70px;
+  height: 60px;
+  text-align: center;
+  font-size: 10px;
 }
-.yema_choosed{
-	color: #99CC66;
-	border: 1px solid #99CC66;
+ 
+.spinner > div {
+  background-color: #67CF22;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+   
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
+}
+ 
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+ 
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+ 
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+ 
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+ 
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+  20% { -webkit-transform: scaleY(1.0) }
+}
+ 
+@keyframes stretchdelay {
+  0%, 40%, 100% { 
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% { 
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
+}
+
+.loadfont{
+	color: #E6E1E1;
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.mypadding_anpai{
+	padding-top: 15px;
+}
+.mypadding_anpai select{
+	margin-left:5px;
+}
+.mypadding_anpai input{
+	margin-top: -3px;
+	margin-left:10px;
+}
+.mypadding_anpai_2{
+	padding-left: 5px;
+}
+.mypadding_anpai_2 input {
+	margin-top: -3px;
+
+}
+.mypadding_anpai_2 a {
+	margin-top: -3px;
+
+}
+.zhibanshow{
+	padding: 1px 30px 50px 30px;
+}
+.zhibanshow span{
+	font-weight: bold;
+	font-size: 1.2em;
+	margin-bottom: 10px;
 }
