--- a/web/css/admin/adminMoments.css
+++ b/web/css/admin/adminMoments.css
@@ -18,8 +18,8 @@
     z-index: 101;
     opacity: 0;
     width: 200px;
-    height: 300px;
-    background-color: #909090;
+    height: 200px;
+    background-color: #ADADAD;
     opacity: 0.4;
     border-radius: 5%;
     left: 70%;
@@ -27,16 +27,20 @@
     -webkit-transform: translateX(-50%);
     -webkit-transition:all .4s ease-in-out;
 }
+.showSetting_2 span{
+    margin-left: 20px;
+    font-size: 1.2em;
+}
 .myred{
     color: #dc0010;
 }
-.yema_mom a{
-    margin:10px;
-    padding: 5px;
-    font-size: 1.3em;
-    cursor:pointer;
+.mysetforbtn_mom{
+    position: absolute;
+    bottom: 0px;
 }
-.yema_choosed{
-    color: #99CC66;
-    border: 1px solid #99CC66;
+.Set_tit_2{
+    text-align: center;
+    font-size: 1.4em;
+    margin:5px 0 10px 0
+
 }
