--- a/web/css/admin/adminUser.css
+++ b/web/css/admin/adminUser.css
@@ -22,8 +22,8 @@
 	z-index: 101;
 	opacity: 0;
 	width: 200px;
-	height: 300px;
-	background-color: #909090;
+	height: 200px;
+	background-color: #ADADAD;
 	opacity: 0.4;
 	border-radius: 5%;
 	left: 50%;
@@ -31,24 +31,20 @@
 	-webkit-transform: translateX(-50%);
 	-webkit-transition:all .4s ease-in-out;
 }
+.showSetting_user_2 span{
+	margin-left: 20px;
+	font-size: 1.2em;
+}
 .Set_tit_user_2{
 	position: relative;
 	color: #EEE;
-	font-size: 1.2em;
+	font-size: 1.4em;
 	text-align: center;
 	text-shadow: 5px 5px 5px #000;
 	top: 13px;
 	-webkit-transform: translateY(-50%);
 }
-
-.yema_user a{
-	margin:10px;
-	padding: 5px;
-	font-size: 1.3em;
-	cursor:pointer;
-}
-
-.yema_choosed{
-	color: #99CC66;
-	border: 1px solid #99CC66;
+.mysetforbtn_user{
+    position: absolute;
+    bottom: 0px;
 }
