给金永辉的小礼物
他很不服！

--- a/views/user/homepage.html
+++ b/views/user/homepage.html
@@ -20,7 +20,7 @@
 				<a class="nav_btn" href="index.php?r=user/item">项目</a>
 				<a class="nav_btn" href="index.php?r=user/homepage">我的</a>
 				<a class="nav_btn" href="index.php?r=user/order">排班</a>
-				<a class="nav_btn" href="index.php?r=user/getmess">收件箱</a>
+				<a class="nav_btn" href="index.php?r=user/getmess">动态</a>
 			</section>
 			<section class="nav_right">
 				<a class="nav_btn glyphicon glyphicon-th-list" onclick="showThing()"><span aria-hidden="true"></span></a>
