--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -16,7 +16,12 @@
 		<header class="Ad_head" id="head">
 			<button class="btn btn-primary hd_downbtn" onclick="tiggle()">下拉</button>
 			<a class="nav_btn"></a>
+			<form action="index.php?r=site/logout" method="post">
+				<input type="submit" value="退出">
+			</form>
+			<!--<a class="nav_btn mylogout" id="adminlogout" href="index.php?r=site/logout">退出登陆</a>-->
 		</header>
+
 		<section class="col-xs-2 Ad_Lef" id="showandhide">
 			<br>
 			<input type="text" class="form-control Ad_Lef_sea" placeholder="Search"><br>
