--- a/views/user/homepage.html
+++ b/views/user/homepage.html
@@ -46,7 +46,9 @@
 		</div>
 	</section>
 	<section class="col-xs-12 home_Main" id="home_Main">
-		<section class="col-xs-1 blockThing"></section>
+		<section class="col-xs-1 blockThing" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="leaveDrop(event)" id="completeTodo">
+			<section class="cover"></section>
+		</section>
 		<section class="col-xs-10 todayShow" id="today_Show">
 <!-- 				<div id="mission" class="mission_type" draggable="true" ondragstart="drag(event)">
 				<span class="mission_SpDes">烧水</span>
@@ -57,8 +59,19 @@
 				</div> -->
 			</div>
 		</section>
-		<section class="col-xs-1 blockThing" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="leaveDrop(event)" id="deleteTodo"></section>
+		<section class="col-xs-1 blockThing" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="leaveDrop(event)" id="deleteTodo">
+		</section>
 		<section class="cover"></section>
+	</section>
+	<section class="setting">
+		<div class="setting_block"><p class="setting_p">周倩叶</p></div>
+		<div class="setting_underline"></div>
+		<input type="password" class="setting_textfield" placeholder="新密码" id="Up_password">
+		<div class="setting_block" onclick="updatePassword()"><p class="setting_p">更新密码</p></div>
+		<div class="setting_underline"></div>
+		<form action="index.php?r=site/logout" method="post">
+			<input type="submit" class="setting_block setting_logout" value="退出">
+		</form>
 	</section>
     <script src="js/jquery.min.js"></script>
     <script src="js/userItem.js"></script>
@@ -100,8 +113,10 @@
 		function getRawData() {
 			$("#today_Show").empty();
 			$("#deleteTodo").empty();
+			$("#completeTodo").empty();
 			document.getElementById('today_Show').innerHTML = '<br><p class="TS_head">今天的任务</p><hr><div class="today_Show_miss" id="today_Show_miss">';
-			document.getElementById('deleteTodo').innerHTML = '<span class="glyphicon glyphicon-trash trash_style" id="deleteIcon" aria-hidden="true"></span>';
+			document.getElementById('deleteTodo').innerHTML = '<span class="glyphicon glyphicon-check trash_style" id="deleteIcon" aria-hidden="true"></span>';
+			document.getElementById('completeTodo').innerHTML = '<span class="glyphicon glyphicon-trash trash_style" id="completeIcon" aria-hidden="true"></span>';
 			var height = document.body.clientHeight -110;
 			document.getElementById('home_Main').style.height =  height+'px';
 			$.getJSON('index.php?r=json/owntodos', function(data, textStatus) {
@@ -117,19 +132,32 @@
 		function drop(Dropevent) {
 			Dropevent.preventDefault();
 			// var data = Dropevent.dataTransfer.getData("Text");
+			//这是任务完成
 			if (Dropevent.target.id == 'deleteTodo') {
 				Dropevent.target.style.background  = "#EEE";
 				document.getElementById('deleteIcon').style.color = '#333';
+				//与数据库进行交换
+				Urgenthandle(this.i, 4);
+			}
+			//这是任务删除
+			if (Dropevent.target.id == 'completeTodo') {
+				Dropevent.target.style.background  = "#EEE";
+				document.getElementById('completeIcon').style.color = '#333';
+				//与数据库进行交换
+				deletehandle(this.i);
 			}
 			// Dropevent.target.appendChild(document.getElementById(data));
-			//与数据库进行交换
-			Urgenthandle(this.i, 4);
+
 		}
 		function allowDrop(Dropevent) {
 			Dropevent.preventDefault();
 			if (Dropevent.target.id == 'deleteTodo') {
 				Dropevent.target.style.background  = "#AAA";
 				document.getElementById('deleteIcon').style.color = '#FFF';
+			}
+			if (Dropevent.target.id == 'completeTodo') {
+				Dropevent.target.style.background  = "#AAA";
+				document.getElementById('completeIcon').style.color = '#FFF';
 			}
 		}
 		function drag(Dropevent) {
@@ -142,6 +170,10 @@
 			if (Dropevent.target.id == 'deleteTodo') {
 				Dropevent.target.style.background  = "#EEE";
 				document.getElementById('deleteIcon').style.color = '#333';
+			}
+			if (Dropevent.target.id == 'completeTodo') {
+				Dropevent.target.style.background  = "#EEE";
+				document.getElementById('completeIcon').style.color = '#333';
 			}
 		}
 		document.addEventListener("dragend", function(Dropevent) {
