--- a/views/user/message.html
+++ b/views/user/message.html
@@ -46,6 +46,16 @@
 		</section>
 		<section class="col-xs-1 blockThing" id="deleteTodo"></section>
 	</section>
+	<section class="setting">
+		<div class="setting_block"><p class="setting_p">周倩叶</p></div>
+		<div class="setting_underline"></div>
+		<input type="password" class="setting_textfield" placeholder="新密码" id="Up_password">
+		<div class="setting_block" onclick="updatePassword()"><p class="setting_p">更新密码</p></div>
+		<div class="setting_underline"></div>
+		<form action="index.php?r=site/logout" method="post">
+			<input type="submit" class="setting_block setting_logout" value="退出">
+		</form>
+	</section>
     <script src="js/jquery.min.js"></script>
     <script src="js/userItem.js"></script>
 	<script>
