--- a/views/user/stOrderclass.html
+++ b/views/user/stOrderclass.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/main/bootstrap.css">
-	<link rel="stylesheet" href="css/main/normalize.css">
-	<link rel="stylesheet" href="css/Main.css">
-	<link rel="stylesheet" href="css/user/userOrder.css">
-	<link rel="stylesheet" href="css/teambition.css">
-	<title>工程大易班</title>
-	<style>html,body{height:100%;overflow: hidden;}</style>
-</head>
-<body>
-<header>
-	<nav>
-		<div onclick="indexShow()" class="nav_pic" style="background-image: url(images/SuesYiBanteam.png);"></div>
-		<section class="nav_sec1">
-			<a class="nav_btn" href="index.php?r=user/item">项目</a>
-			<a class="nav_btn" href="index.php?r=user/homepage">我的</a>
-			<a class="nav_btn" href="index.php?r=user/order">排班</a>
-			<a class="nav_btn" href="index.php?r=user/getmess">动态</a>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/main/bootstrap.css">
+		<link rel="stylesheet" href="css/main/normalize.css">
+		<link rel="stylesheet" href="css/Main.css">
+		<link rel="stylesheet" href="css/user/userOrder.css">
+		<link rel="stylesheet" href="css/teambition.css">
+		<title>工程大易班</title>
+		<style>html,body{height:100%;overflow: hidden;}</style>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<div onclick="indexShow()" class="nav_pic" style="background-image: url(images/SuesYiBanteam.png);"></div>
+				<section class="nav_sec1">
+					<a class="nav_btn" href="index.php?r=user/item">项目</a>
+					<a class="nav_btn" href="index.php?r=user/homepage">我的</a>
+					<a class="nav_btn" href="index.php?r=user/order">排班</a>
+					<a class="nav_btn" href="index.php?r=user/getmess">动态</a>
+				</section>
+				<section class="nav_right">
+					<a class="nav_btn glyphicon glyphicon-th-list" onclick="showThing()"><span aria-hidden="true"></span></a>
+				</section>
+			</nav>
+		</header>
+		<section class="col-xs-12 home_first sec_nav">
+			<div class="centerGet_btn">
+				<select  class="" id="whichweek_1"></select>
+				<select class="" id="weekday_1">
+					<option value="1">周一</option>
+					<option value="2">周二</option>
+					<option value="3">周三</option>
+					<option value="4">周四</option>
+					<option value="5">周五</option>
+					<option value="6">周六</option>
+					<option value="7">周日</option>
+				</select>
+				<a onclick="searchOrder()">搜索</a>
+			</div>
 		</section>
-		<section class="nav_right">
-			<a class="nav_btn glyphicon glyphicon-th-list" onclick="showThing()"><span aria-hidden="true"></span></a>
+		<div class="ordertable" id="ordertable">
+			<div id="zhibanshow" class="zhibanshow">
+				<span>12:00-14:00</span><br><br>
+				<p id="first_arr">
+				</p>
+				<hr class="myhr">
+				<span>14:00-16:00</span><br><br>
+				<p id="second_arr">
+				</p>
+				<hr class="myhr">
+				<span>18:00-20:00</span><br><br>
+				<p id="third_arr">
+				</p>
+			</div>
+		</div>
+		<section class="setting">
+			<div class="setting_block"><p class="setting_p">周倩叶</p></div>
+			<div class="setting_underline"></div>
+			<input type="password" class="setting_textfield" placeholder="新密码" id="Up_password">
+			<div class="setting_block" onclick="updatePassword()"><p class="setting_p">更新密码</p></div>
+			<div class="setting_underline"></div>
+			<form action="index.php?r=site/logout" method="post">
+				<input type="submit" class="setting_block setting_logout" value="退出">
+			</form>
 		</section>
-	</nav>
-</header>
-<section class="col-xs-12 home_first sec_nav">
-	<div class="centerGet_btn">
-		<select  class="" id="whichweek_1"></select>
-		<select class="" id="weekday_1">
-			<option value="1">周一</option>
-			<option value="2">周二</option>
-			<option value="3">周三</option>
-			<option value="4">周四</option>
-			<option value="5">周五</option>
-			<option value="6">周六</option>
-			<option value="7">周日</option>
-		</select>
-		<a onclick="searchOrder()">搜索</a>
-	</div>
-</section>
-<div class="ordertable" id="ordertable">
-	<div id="zhibanshow" class="zhibanshow">
-		<span>12:00-14:00</span><br><br>
-		<p id="first_arr">
-		</p>
-		<hr class="myhr">
-		<span>14:00-16:00</span><br><br>
-		<p id="second_arr">
-		</p>
-		<hr class="myhr">
-		<span>18:00-20:00</span><br><br>
-		<p id="third_arr">
-		</p>
-	</div>
-</div>
-<script src="js/userOrder.js"></script>
-<script src="js/userItem.js"></script>
-<script src="js/jquery.min.js"></script>
-<script>
-	$(function(){
-		var week_sel_1=document.getElementById("whichweek_1")
-		for(i=1;i<=22;i++){
-			week_sel_1.options.add(new Option('第'+i+'周',i))
-		}
-		searchOrder()
-	})
-</script>
-</body>
+	<script src="js/userOrder.js"></script>
+	<script src="js/userItem.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script>
+		$(function(){
+			var week_sel_1=document.getElementById("whichweek_1")
+			for(i=1;i<=22;i++){
+				week_sel_1.options.add(new Option('第'+i+'周',i))
+			}
+			searchOrder()
+		})
+	</script>
+	</body>
 </html>
