--- a/web/css/teambition.css
+++ b/web/css/teambition.css
@@ -302,28 +302,54 @@ nav ,.sec_nav{
 
 }
 
-.Setting77 {
+.setting {
 	position: absolute;
-	top: 40px;	
+	top: 40px;
 	right: 25px;
-	width: 200px;
-	height: 200px;
+	padding: 10px 0px;
+	width: 150px;
 	border-radius: 5px;
-	background-color: #AAA;
+	border: 1px solid #CCC;
+	background-color: #FFF;
 	overflow: hidden;
 }
-.model_SetBlock {
-	height: 50px;
-	width: 100%;
-}
-.haveBorder {
-	border-bottom:1px solid #111;
-}
-.centerMomentName {
+.setting_block {
+	cursor: pointer;
 	position: relative;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-}
-.sameSizeModel {
+	height: 30px;
 	width: 100%;
+	-webkit-transition:all .2s ease-in-out;
+}
+.setting_block:hover {
+	background-color: #EEE;
+}
+ .setting_p {
+ 	position: relative;
+ 	top: 50%;
+	font-size: 1.1em;
+	-webkit-transform: translateY(-50%);
+	padding: 0px 15px;
+
+ }
+ .setting_underline {
+	margin: 10px 0px;
+	height: 1px;
+	background-color: #CCC;
+
+ }
+ .setting_logout {
+ 	padding: 0px 15px;
+ 	text-align: left;
+ 	background-color: #FFF;
+	border: 0px; 
+}
+.setting_textfield {
+	padding: 0px 15px;
+	height: 30px;
+	outline: none;
+	border: 0px;
+	-webkit-transition:all .5s ease-in-out;
+}
+.setting_textfield:hover, .setting_textfield:focus{
+	background-color: #EEE;
 }
