--- a/views/admin/itemshow.html
+++ b/views/admin/itemshow.html
@@ -52,10 +52,12 @@
 					<a class="nav_btn" onclick="searchUserhandle()">搜索</a>
 					<span class="myword">状态选择：</span>
 					<select name="sel_status" class="myselect" id="sel_status" onchange="selectItem()" onclick='document.getElementById("searchUser").value=""'>
-						<option value="4">显示全部</option>
+						<option value="0">显示全部</option>
 						<option value="1">待审核</option>
 						<option value="2">已审核</option>
 						<option value="3">已完成</option>
+						<option value="4">未通过</option>
+
 					</select>
 				</span><hr>
 				<br>
